Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Diversity advocate, school teacher, and women's empowerment speaker transitioning into the big world of tech as an aspiring software engineer. When I'm not sitting behind a computer screen, I can be found working with women of typically underrepresented backgrounds in higher education as the Director of Multiculturalism for a national women's group. On a voyage at sea around the world, I discovered the power of tech and it's potential to bring people together. My ultimate goal is to found a female-led start-up that creates safety technology for international travelers. </p>
